Fixed horizontal scrollbar

--- a/frontend/scss/base/_base.scss
+++ b/frontend/scss/base/_base.scss
@@ -15,7 +15,6 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 0rem 1rem;
     max-width: 1200px;
     width: 100%;
 }
