--- a/frontend/scss/layout/_footer.scss
+++ b/frontend/scss/layout/_footer.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     gap: 0.8rem;
     background-color: $color-quaternary;
-    padding: 1.5rem;
+    padding: 1.5rem 0;
     width: 100%;
     margin-top: auto;
 }
